# SpeddMOTOR

./: README.md  pyproject.toml
src/speedMOTOR/: setspeed.py
